--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node -r esm ."
   },
   "keywords": [],
   "author": "",
