--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "graphql-client-server-example",
+  "name": "@dev-demands/root",
   "version": "1.0.0",
   "description": "",
-  "private": true,
-  "main": "src/main.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r esm ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "esm": "^3.2.25"
-  }
+  "license": "ISC"
 }
