--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,13 +6,14 @@
   "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r esm ."
+    "start": "nodemon -r esm ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "esm": "^3.2.25"
+    "esm": "^3.2.25",
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
     "express": "^4.18.1"
