--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,8 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "apollo-server-express": "2",
+    "express": "^4.18.1",
+    "graphql": "14"
   }
 }
