--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,5 +20,10 @@
     "apollo-server-express": "2",
     "express": "^4.18.1",
     "graphql": "14"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "src/data"
+    ]
   }
 }
