--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "apollo-server-express": "2",
     "express": "^4.18.1",
-    "graphql": "14"
+    "graphql": "14",
+    "uuid": "^8.3.2"
   },
   "nodemonConfig": {
     "ignore": [
